add more debug tips to readme.txt